--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,8 +10,6 @@
     <title>{{ .Title | emojify }} &middot; {{ .Site.Title | emojify }}</title>
     <meta name="title" content="{{ .Title | emojify }} &middot; {{ .Site.Title | emojify }}" />
   {{- end }}
-  {{/* Pretendard Font */}}
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   
   {{/* JetBrains Mono Font for Code */}}
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -107,14 +105,7 @@
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .RelPermalink ($.Site.Title | emojify) | safeHTML }}
   {{ end -}}
   {{/* Icons */}}
-  {{ if templates.Exists "partials/favicons.html" }}
-    {{ partialCached "favicons.html" .Site }}
-  {{ else }}
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | relURL }}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon-32x32.png" | relURL }}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon-16x16.png" | relURL }}" />
-    <link rel="manifest" href="{{ "site.webmanifest" | relURL }}" />
-  {{ end }}
+  {{ partial "favicons.html" . }}
   {{/* Site Verification */}}
   {{ with .Site.Params.verification.google }}
     <meta name="google-site-verification" content="{{ . }}" />
