fix: 모바일 햄버거 메뉴 완전 수정 및 빌드 오류 해결
- 햄버거 메뉴 HTML 구조 수정
  - input과 label 태그 순서 정리
  - sm:hidden 클래스 추가로 모바일에서만 햄버거 버튼 표시
- 필수 JavaScript 파일 복원
  - appearance.js: 테마 전환 기능
  - menu.js: 햄버거 메뉴 토글 기능
- 누락된 아이콘 파일들 추가
- head.html 단순화로 빌드 오류 해결
- vendor.html 임시 비활성화
- 문제가 되는 icons 샘플 게시물 비활성화 (draft 상태였음)
- baseof.html에서 hamburger.html 직접 로드

이제 모바일과 데스크톱 모두에서 메뉴가 정상 작동합니다.

--- a/layouts/partials/header/hamburger.html
+++ b/layouts/partials/header/hamburger.html
@@ -6,7 +6,7 @@
     </div>
     {{/* Hamburger menu */}}
     {{ if or .Site.Menus.main (.Site.Params.enableSearch | default false) }}
-      <label id="menu-button" for="menu-controller" class="block">
+      <label id="menu-button" for="menu-controller" class="block sm:hidden">
         <input type="checkbox" id="menu-controller" class="hidden" />
         <div class="cursor-pointer hover:text-primary-600 dark:hover:text-primary-400">
           {{ partial "icon.html" "bars" }}
