--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,12 +20,7 @@
         >{{ i18n "nav.skip_to_main" }}</a
       >
     </div>
-    {{ $header := print "header/" .Site.Params.header.layout ".html" }}
-    {{ if templates.Exists $header }}
-      {{ partial $header . }}
-    {{ else }}
-      {{ partial "header/basic.html" . }}
-    {{ end }}
+    {{ partial "header/hamburger.html" . }}
     <div class="relative flex grow flex-col">
       <main id="main-content" class="grow">
         {{ block "main" . }}{{ end }}
