--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,67 +16,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   
-  {{/* Asset bundles */}}
-  {{ $assets := newScratch }}
-  {{ $algorithm := .Site.Params.fingerprintAlgorithm | default "sha256" }}
-  {{ $jsAppearance := resources.Get "js/appearance.js" }}
-  {{ $jsAppearance = $jsAppearance | resources.Minify | resources.Fingerprint $algorithm }}
-  <script
-    type="text/javascript"
-    src="{{ $jsAppearance.RelPermalink }}"
-    integrity="{{ $jsAppearance.Data.Integrity }}"
-  ></script>
-  {{ $cssScheme := resources.Get (printf "css/schemes/%s.css" (lower .Site.Params.colorScheme | default "congo")) }}
-  {{ if not $cssScheme }}
-    {{ $cssScheme = resources.Get "css/schemes/congo.css" }}
-  {{ end }}
-  {{ $assets.Add "css" (slice $cssScheme) }}
+  {{/* CSS */}}
   {{ $cssMain := resources.Get "css/compiled/main.css" }}
-  {{ $assets.Add "css" (slice $cssMain) }}
+  {{ if $cssMain }}
+    <link rel="stylesheet" href="{{ $cssMain.RelPermalink }}" />
+  {{ end }}
   {{ $cssCustom := resources.Get "css/custom.css" }}
   {{ if $cssCustom }}
-    {{ $assets.Add "css" (slice $cssCustom) }}
+    <link rel="stylesheet" href="{{ $cssCustom.RelPermalink }}" />
   {{ end }}
-  {{ $bundleCSS := $assets.Get "css" | resources.Concat "css/main.bundle.css" | resources.Minify | resources.Fingerprint $algorithm }}
-  <link
-    type="text/css"
-    rel="stylesheet"
-    href="{{ $bundleCSS.RelPermalink }}"
-    integrity="{{ $bundleCSS.Data.Integrity }}"
-  />
-  {{ if .Site.Params.enableSearch | default false }}
-    {{ $jsFuse := resources.Get "lib/fuse/fuse.min.js" }}
-    {{ $jsSearch := resources.Get "js/search.js" }}
-    {{ $assets.Add "js" (slice $jsFuse $jsSearch) }}
+  
+  {{/* JavaScript */}}
+  {{ $jsAppearance := resources.Get "js/appearance.js" }}
+  {{ if $jsAppearance }}
+    <script src="{{ $jsAppearance.RelPermalink }}"></script>
   {{ end }}
-  {{ if .Site.Params.enableQuicklink | default false }}
-    {{ $jsQuicklink := resources.Get "lib/quicklink/quicklink.umd.js" }}
-    {{ $jsQuicklinkInit := resources.Get "js/quicklink.js" }}
-    {{ $assets.Add "js" (slice $jsQuicklink $jsQuicklinkInit) }}
-  {{ end }}
-  {{ if .Site.Params.enableCodeCopy | default false }}
-    {{ $jsCode := resources.Get "js/code.js" }}
-    {{ $assets.Add "js" (slice $jsCode) }}
-  {{ end }}
-  {{ if or (eq .Site.Params.header.layout "hamburger") (eq .Site.Params.header.layout "hybrid") }}
-    {{ $jsMenu := resources.Get "js/menu.js" }}
-    {{ $assets.Add "js" (slice $jsMenu) }}
-  {{ end }}
-  {{ if eq (site.Language.LanguageDirection | default "ltr") "rtl" }}
-    {{ $jsRTL := resources.Get "js/rtl.js" }}
-    {{ $assets.Add "js" (slice $jsRTL) }}
-  {{ end }}
-  {{ if $assets.Get "js" }}
-    {{ $bundleJS := $assets.Get "js" | resources.Concat "js/main.bundle.js" | resources.Minify | resources.Fingerprint $algorithm }}
-    <script
-      defer
-      type="text/javascript"
-      id="script-bundle"
-      src="{{ $bundleJS.RelPermalink }}"
-      integrity="{{ $bundleJS.Data.Integrity }}"
-      data-copy="{{ i18n "code.copy" }}"
-      data-copied="{{ i18n "code.copied" }}"
-    ></script>
+  {{ $jsMenu := resources.Get "js/menu.js" }}
+  {{ if $jsMenu }}
+    <script src="{{ $jsMenu.RelPermalink }}"></script>
   {{ end }}
   {{/* Metadata */}}
   <meta
